@@ -213,7 +213,7 @@ public class TextModifyTest {
             // delete space
             if (0 < fromindex || leftLength < nodeLength) {
               final int deleted = Math.min(leftLength, nodeLength - fromindex);
-              ((TextSElement) node).setTextCAttribute(new Integer(nodeLength - deleted));
+              ((TextSElement) node).setTextCAttribute(Integer.valueOf(nodeLength - deleted));
               leftLength = leftLength - deleted;
             } else {
               Node nodeMerker = node.getNextSibling();
